--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.1",
     "@tanstack/react-query": "^5.24.1",
     "axios": "^1.6.7",
     "classnames": "^2.5.1",
@@ -21,6 +22,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-redux": "^9.1.0",
     "react-responsive-carousel": "^3.2.23",
     "sass": "^1.71.1",
     "sharp": "^0.33.2",
